fix swagdoc
