# docs/swagger.json
@@ -17,6 +17,15 @@
                     "track"
                 ],
                 "summary": "Delete song",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "song id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -30,20 +39,8 @@
                             "$ref": "#/definitions/v1.DeleteResponse"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/v1.DeleteResponse"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/v1.DeleteResponse"
-                        }
-                    },
-                    "default": {
-                        "description": "",
                         "schema": {
                             "$ref": "#/definitions/v1.DeleteResponse"
                         }
@@ -64,6 +61,50 @@
                     "track"
                 ],
                 "summary": "Get list of song",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "song id",
+                        "name": "id",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "group name",
+                        "name": "group_name",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "song name",
+                        "name": "song",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "gong text",
+                        "name": "text",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "realise date",
+                        "name": "realise_date",
+                        "in": "path"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "path"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "path"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -77,20 +118,8 @@
                             "$ref": "#/definitions/v1.ListResponse"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/v1.ListResponse"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/v1.ListResponse"
-                        }
-                    },
-                    "default": {
-                        "description": "",
                         "schema": {
                             "$ref": "#/definitions/v1.ListResponse"
                         }
@@ -111,6 +140,15 @@
                     "track"
                 ],
                 "summary": "Get song text",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "song id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
